--- a/mern-exercise-tracker/backend/.env
+++ b/mern-exercise-tracker/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://thanhle0203:Kaivin@123@cluster0.vrrhr.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://thanhle0203:Kaivintruong@cluster0.vrrhr.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
